<resources>
    <string name="app_name">Popollo_Adventures_Android</string>
    <string name="atacar">Atacar</string>
    <string name="defender">Defender</string>
    <string name="habilidades">Habilidades</string>
    <string name="objetos">Objetos</string>
    <string name="volver">Volver</string>
    <string name="nuevaPartida">Nueva Partida</string>
    <string name="continuar">Continuar</string>
    <string name="galeria">Galeria</string>
    <string name="salir">Salir</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cerrarJuego">¿Quieres cerrar el juego?</string>
    <string name="irAMenuPrincipal">¿Quieres salir al menú principal?</string>
    <string name="salirDeLaTienda">¿Quieres salir de la tienda?</string>
    <string name="entrarAreaDescanso">^^ Entrando en el area de descanso ^^</string>
    <string name="curacionRecibida">Curacion recibida</string>
    <string name="descansoFrase">Me encanta este sitio.</string>
    <string name="curarHeridas">Curar heridas - 250</string>
    <string name="recuperacionCompleta">Recuperación completa - 500</string>
    <string name="volverAlMapa">Volver al mapa</string>
    <string name="salirDelDescanso">¿Quieres salir del area de descanso?</string>
    <string name="mensajeSalirTienda">^^ Vuelve cuando quieras ^^</string>
    <string name="mensajeAgradecimientoCompra">Compra realizada</string>
    <string name="eventoEspecial">¡¡¡Evento Especial!!!</string>
    <string name="guardarPartida">Guardar Partida</string>
    <string name="combateAleatorio">Combate Aleatorio</string>
    <string name="areaDeDescanso">Area de Descanso</string>
    <string name="salirEvento">Vuelves al camino</string>
    <string name="grabarPartida">^^ Guardando partida ^^</string>
    <string name="salirInicio">Volviendo al menú de inicio</string>
    <string name="iniciarPartida">Disfruta tu aventura</string>
    <string name="salirDelJuego">Nos vemos pronto</string>
    <string name="info">Info</string>
    <string name="entrarEnTienda">"^^ Entrando en la tienda ^^"</string>
    <string name="bajoNivel">¡¡¡RETIRADA!!!\nNivel insuficiente </string>
    <string name="avanzar">¿Quieres avanzar a tu siguiente destino?</string>
    <string name="ok">OK</string>
    <string name="primerPaso">¡¡¡FELICIDADES!!!\n^^ Has dado tu primer paso ^^</string>
    <string name="entrarEnCombate">Entrando en tu proximo combate OwO</string>
    <string name="guardarPArtida">¿Quieres guardar la partida actual?</string>
    <string name="objeto">OBJETOS</string>
    <string name="atributos">ATRIBUTOS</string>
</resources>